# Tauri-Desktop-Software-Template

./: .env.example  .gitattributes  .gitignore  .jscpd.json  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  README.zh.md  SECURITY.md  cliff.toml  commitlint.config.js  eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  prettier.config.js  quick-pane.html  sgconfig.yml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-v2.yml  release.yml
.husky/: commit-msg  pre-commit  pre-push
docs/: CONTRIBUTING.en.md  CONTRIBUTING.zh.md  README.en.md  README.zh.md  SECURITY.en.md  SECURITY.zh.md  USING_THIS_TEMPLATE.en.md  USING_THIS_TEMPLATE.zh.md  tasks.en.md  tasks.zh.md
docs/conversations/: 2026-07-20-fix-accessibility.md
docs/developer/: README.en.md  README.zh.md  architecture-guide.en.md  architecture-guide.zh.md  bundle-optimization.en.md  bundle-optimization.zh.md  code-signing.en.md  code-signing.zh.md  command-system.en.md  command-system.zh.md  cross-platform.en.md  cross-platform.zh.md  data-persistence.en.md  data-persistence.zh.md  error-handling.en.md  error-handling.zh.md  external-apis.en.md  external-apis.zh.md  i18n-patterns.en.md  i18n-patterns.zh.md  keyboard-shortcuts.en.md  keyboard-shortcuts.zh.md  logging.en.md  logging.zh.md  menus.en.md  menus.zh.md  notifications.en.md  notifications.zh.md  observability.en.md  observability.zh.md  quick-panes.en.md  quick-panes.zh.md  releases.en.md  releases.zh.md  rust-architecture.en.md  rust-architecture.zh.md  state-management.en.md  state-management.zh.md  static-analysis.en.md  static-analysis.zh.md  (+12 more)
docs/userguide/: userguide.en.md  userguide.zh.md
e2e/: accessibility.spec.ts  advanced-pane.spec.ts  app-launch.spec.ts  command-palette-keyboard.spec.ts  command-palette.spec.ts  crash-report-details.spec.ts  crash-report.spec.ts  fixtures.ts  general-pane.spec.ts  global.d.ts  i18n-completeness.spec.ts  keyboard-shortcuts.spec.ts  notifications.spec.ts  preferences.spec.ts  quick-pane-event.spec.ts  sidebar.spec.ts  theme-language.spec.ts  tsconfig.json  window-commands.spec.ts
e2e/mocks/: tauri-mock.ts
locales/: en.json  zh.json
scripts/: complete-task.js  prepare-release.js
src/: App.css  App.test.tsx  App.tsx  main.tsx  quick-pane-main.tsx  quick-pane.css  theme-variables.css
src-tauri/: Cargo.toml  app-manifest.rc  app-manifest.xml  build.rs  deny.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  quick-pane.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  error.rs  lib.rs  types.rs
src-tauri/src/commands/: crash_report.rs  mod.rs  notifications.rs  preferences.rs  quick_pane.rs  recovery.rs  tray.rs
src-tauri/src/utils/: mod.rs  paths.rs  platform.rs  redact.rs
src-tauri/tests/: crash_report_integration.rs  preferences_integration.rs  recovery_integration.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  ThemeProvider.test.tsx  ThemeProvider.tsx
src/hooks/: use-auto-updater.ts  use-deep-link.ts  (+17 more)
(+119 files in other folders)
