[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Embeds the Windows manifest (Common-Controls v6) into test binaries.
# tauri-build uses embed_resource::compile() which outputs
# `cargo:rustc-link-arg-bins` — only applying to binary targets, not tests.
# We use compile_for_tests() to cover `cargo test` binaries.
embed-resource = "3"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
log = "0.4"
regex = "1"

# Sentry SDK for Rust — captures panics and sends them to the self-hosted
# Sentry instance. The `panic` feature (enabled by default) installs a panic
# Sentry integration: `panic` hook automatically reports panics. The `log`
# integration bridges `log` crate calls into Sentry breadcrumbs. The `logs`
# feature enables structured log forwarding to Sentry's Logs product.
sentry = { version = "0.48", features = ["log", "logs"] }

# Type-safe Tauri command bindings
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["typescript"] }
specta-typescript = "=0.0.12"
thiserror = "2.0.18"
tauri-plugin-http = "2.5.9"
tauri-plugin-store = "2.4.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-window-state = "2"

# macOS-only: NSPanel for native panel behavior (fullscreen overlay, click-outside dismiss)
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

# Optimize for smaller binary size in release builds
[profile.release]
codegen-units = 1        # Better LLVM optimization (slower build, smaller binary)
lto = true               # Link-time optimizations
opt-level = "s"          # Optimize for size over speed
panic = "unwind"        # Required for Sentry panic integration to capture backtraces
strip = true             # Remove debug symbols

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tauri = { version = "2", features = ["test"] }

